# sigGen

./: .gitignore  README.md  pyproject.toml
src/: pg.py
src/basics/gen_mnist_sde/: mixer.py  mixer_classification_demo.py  mixer_diffusion_model.py
src/fin_gen/basics/: poisson_counter.py
